src/main/java/th/ac/sut/fjd/FJDParser.java
// $ANTLR 3.4 C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g 2011-12-09 01:16:17
 package th.ac.sut.fjd; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class FJDParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARG", "ARGS", "CAST_EXPR", "CHAR", "CLASS", "CTOR", "CTOR_BODY", "DYNAMIC", "ESC_SEQ", "EXPR", "EXPR_LIST", "FIELD", "FIELDS", "FIELD_ACCESS_EXPR", "FIELD_INIT", "FIELD_INIT_LIST", "HEX_DIGIT", "ID", "METHOD", "METHODS", "METH_BODY", "METH_CALL_EXPR", "NEW_EXPR", "OCTAL_ESC", "PROGRAM", "STRING", "SUPER_CLASS", "SUPER_STMT", "THIS_EXPR", "TYPE", "UNICODE_ESC", "VALUE_EXPR", "WS", "'('", "')'", "','", "'.'", "';'", "'='", "'class'", "'def'", "'extends'", "'new'", "'return'", "'super'", "'this'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int ARG=4;
    public static final int ARGS=5;
    public static final int CAST_EXPR=6;
    public static final int CHAR=7;
    public static final int CLASS=8;
    public static final int CTOR=9;
    public static final int CTOR_BODY=10;
    public static final int DYNAMIC=11;
    public static final int ESC_SEQ=12;
    public static final int EXPR=13;
    public static final int EXPR_LIST=14;
    public static final int FIELD=15;
    public static final int FIELDS=16;
    public static final int FIELD_ACCESS_EXPR=17;
    public static final int FIELD_INIT=18;
    public static final int FIELD_INIT_LIST=19;
    public static final int HEX_DIGIT=20;
    public static final int ID=21;
    public static final int METHOD=22;
    public static final int METHODS=23;
    public static final int METH_BODY=24;
    public static final int METH_CALL_EXPR=25;
    public static final int NEW_EXPR=26;
    public static final int OCTAL_ESC=27;
    public static final int PROGRAM=28;
    public static final int STRING=29;
    public static final int SUPER_CLASS=30;
    public static final int SUPER_STMT=31;
    public static final int THIS_EXPR=32;
    public static final int TYPE=33;
    public static final int UNICODE_ESC=34;
    public static final int VALUE_EXPR=35;
    public static final int WS=36;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public FJDParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public FJDParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return FJDParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:41:1: program : ( classDecl )+ expr -> ^( PROGRAM ( classDecl )+ ^( EXPR expr ) ) ;
    public final FJDParser.program_return program() throws RecognitionException {
        FJDParser.program_return retval = new FJDParser.program_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        FJDParser.classDecl_return classDecl1 =null;

        FJDParser.expr_return expr2 =null;


        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_classDecl=new RewriteRuleSubtreeStream(adaptor,"rule classDecl");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:42:5: ( ( classDecl )+ expr -> ^( PROGRAM ( classDecl )+ ^( EXPR expr ) ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:42:7: ( classDecl )+ expr
            {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:42:7: ( classDecl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==43) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:42:7: classDecl
            	    {
            	    pushFollow(FOLLOW_classDecl_in_program187);
            	    classDecl1=classDecl();

            	    state._fsp--;

            	    stream_classDecl.add(classDecl1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            pushFollow(FOLLOW_expr_in_program196);
            expr2=expr();

            state._fsp--;

            stream_expr.add(expr2.getTree());

            // AST REWRITE
            // elements: classDecl, expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 44:7: -> ^( PROGRAM ( classDecl )+ ^( EXPR expr ) )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:44:10: ^( PROGRAM ( classDecl )+ ^( EXPR expr ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                if ( !(stream_classDecl.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_classDecl.nextTree());

                }
                stream_classDecl.reset();

                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:44:31: ^( EXPR expr )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(EXPR, "EXPR")
                , root_2);

                adaptor.addChild(root_2, stream_expr.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class classDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDecl"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:47:1: classDecl : 'class' className= ID 'extends' superClass= ID '{' fieldDecls ctorDecl methodDecls '}' -> ^( CLASS $className ^( SUPER_CLASS $superClass) fieldDecls ctorDecl methodDecls ) ;
    public final FJDParser.classDecl_return classDecl() throws RecognitionException {
        FJDParser.classDecl_return retval = new FJDParser.classDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token className=null;
        Token superClass=null;
        Token string_literal3=null;
        Token string_literal4=null;
        Token char_literal5=null;
        Token char_literal9=null;
        FJDParser.fieldDecls_return fieldDecls6 =null;

        FJDParser.ctorDecl_return ctorDecl7 =null;

        FJDParser.methodDecls_return methodDecls8 =null;


        CommonTree className_tree=null;
        CommonTree superClass_tree=null;
        CommonTree string_literal3_tree=null;
        CommonTree string_literal4_tree=null;
        CommonTree char_literal5_tree=null;
        CommonTree char_literal9_tree=null;
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_fieldDecls=new RewriteRuleSubtreeStream(adaptor,"rule fieldDecls");
        RewriteRuleSubtreeStream stream_ctorDecl=new RewriteRuleSubtreeStream(adaptor,"rule ctorDecl");
        RewriteRuleSubtreeStream stream_methodDecls=new RewriteRuleSubtreeStream(adaptor,"rule methodDecls");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:48:5: ( 'class' className= ID 'extends' superClass= ID '{' fieldDecls ctorDecl methodDecls '}' -> ^( CLASS $className ^( SUPER_CLASS $superClass) fieldDecls ctorDecl methodDecls ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:48:9: 'class' className= ID 'extends' superClass= ID '{' fieldDecls ctorDecl methodDecls '}'
            {
            string_literal3=(Token)match(input,43,FOLLOW_43_in_classDecl236);  
            stream_43.add(string_literal3);


            className=(Token)match(input,ID,FOLLOW_ID_in_classDecl240);  
            stream_ID.add(className);


            string_literal4=(Token)match(input,45,FOLLOW_45_in_classDecl242);  
            stream_45.add(string_literal4);


            superClass=(Token)match(input,ID,FOLLOW_ID_in_classDecl246);  
            stream_ID.add(superClass);


            char_literal5=(Token)match(input,50,FOLLOW_50_in_classDecl248);  
            stream_50.add(char_literal5);


            pushFollow(FOLLOW_fieldDecls_in_classDecl262);
            fieldDecls6=fieldDecls();

            state._fsp--;

            stream_fieldDecls.add(fieldDecls6.getTree());

            pushFollow(FOLLOW_ctorDecl_in_classDecl264);
            ctorDecl7=ctorDecl();

            state._fsp--;

            stream_ctorDecl.add(ctorDecl7.getTree());

            pushFollow(FOLLOW_methodDecls_in_classDecl266);
            methodDecls8=methodDecls();

            state._fsp--;

            stream_methodDecls.add(methodDecls8.getTree());

            char_literal9=(Token)match(input,51,FOLLOW_51_in_classDecl276);  
            stream_51.add(char_literal9);


            // AST REWRITE
            // elements: methodDecls, superClass, className, ctorDecl, fieldDecls
            // token labels: superClass, className
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_superClass=new RewriteRuleTokenStream(adaptor,"token superClass",superClass);
            RewriteRuleTokenStream stream_className=new RewriteRuleTokenStream(adaptor,"token className",className);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 51:5: -> ^( CLASS $className ^( SUPER_CLASS $superClass) fieldDecls ctorDecl methodDecls )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:51:9: ^( CLASS $className ^( SUPER_CLASS $superClass) fieldDecls ctorDecl methodDecls )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CLASS, "CLASS")
                , root_1);

                adaptor.addChild(root_1, stream_className.nextNode());

                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:51:28: ^( SUPER_CLASS $superClass)
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(SUPER_CLASS, "SUPER_CLASS")
                , root_2);

                adaptor.addChild(root_2, stream_superClass.nextNode());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_1, stream_fieldDecls.nextTree());

                adaptor.addChild(root_1, stream_ctorDecl.nextTree());

                adaptor.addChild(root_1, stream_methodDecls.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classDecl"


    public static class fieldDecls_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "fieldDecls"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:54:1: fieldDecls : ( fieldDecl )* -> ^( FIELDS ( fieldDecl )* ) ;
    public final FJDParser.fieldDecls_return fieldDecls() throws RecognitionException {
        FJDParser.fieldDecls_return retval = new FJDParser.fieldDecls_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        FJDParser.fieldDecl_return fieldDecl10 =null;


        RewriteRuleSubtreeStream stream_fieldDecl=new RewriteRuleSubtreeStream(adaptor,"rule fieldDecl");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:55:5: ( ( fieldDecl )* -> ^( FIELDS ( fieldDecl )* ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:55:7: ( fieldDecl )*
            {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:55:7: ( fieldDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    int LA2_1 = input.LA(2);

                    if ( (LA2_1==ID) ) {
                        alt2=1;
                    }


                }
                else if ( (LA2_0==44) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:55:7: fieldDecl
            	    {
            	    pushFollow(FOLLOW_fieldDecl_in_fieldDecls321);
            	    fieldDecl10=fieldDecl();

            	    state._fsp--;

            	    stream_fieldDecl.add(fieldDecl10.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: fieldDecl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 56:7: -> ^( FIELDS ( fieldDecl )* )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:56:10: ^( FIELDS ( fieldDecl )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(FIELDS, "FIELDS")
                , root_1);

                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:56:19: ( fieldDecl )*
                while ( stream_fieldDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_fieldDecl.nextTree());

                }
                stream_fieldDecl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "fieldDecls"


    public static class fieldDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "fieldDecl"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:59:1: fieldDecl : type ID ';' -> ^( FIELD type ID ) ;
    public final FJDParser.fieldDecl_return fieldDecl() throws RecognitionException {
        FJDParser.fieldDecl_return retval = new FJDParser.fieldDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ID12=null;
        Token char_literal13=null;
        FJDParser.type_return type11 =null;


        CommonTree ID12_tree=null;
        CommonTree char_literal13_tree=null;
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:60:5: ( type ID ';' -> ^( FIELD type ID ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:60:7: type ID ';'
            {
            pushFollow(FOLLOW_type_in_fieldDecl354);
            type11=type();

            state._fsp--;

            stream_type.add(type11.getTree());

            ID12=(Token)match(input,ID,FOLLOW_ID_in_fieldDecl356);  
            stream_ID.add(ID12);


            char_literal13=(Token)match(input,41,FOLLOW_41_in_fieldDecl358);  
            stream_41.add(char_literal13);


            // AST REWRITE
            // elements: type, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 61:7: -> ^( FIELD type ID )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:61:10: ^( FIELD type ID )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(FIELD, "FIELD")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "fieldDecl"


    public static class ctorDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ctorDecl"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:64:1: ctorDecl : name= ID '(' ( argList )? ')' '{' ctorBody '}' -> ^( CTOR $name ( argList )? ctorBody ) ;
    public final FJDParser.ctorDecl_return ctorDecl() throws RecognitionException {
        FJDParser.ctorDecl_return retval = new FJDParser.ctorDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token name=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal17=null;
        Token char_literal19=null;
        FJDParser.argList_return argList15 =null;

        FJDParser.ctorBody_return ctorBody18 =null;


        CommonTree name_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal19_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_argList=new RewriteRuleSubtreeStream(adaptor,"rule argList");
        RewriteRuleSubtreeStream stream_ctorBody=new RewriteRuleSubtreeStream(adaptor,"rule ctorBody");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:65:5: (name= ID '(' ( argList )? ')' '{' ctorBody '}' -> ^( CTOR $name ( argList )? ctorBody ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:65:7: name= ID '(' ( argList )? ')' '{' ctorBody '}'
            {
            name=(Token)match(input,ID,FOLLOW_ID_in_ctorDecl393);  
            stream_ID.add(name);


            char_literal14=(Token)match(input,37,FOLLOW_37_in_ctorDecl395);  
            stream_37.add(char_literal14);


            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:65:19: ( argList )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==44) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:65:19: argList
                    {
                    pushFollow(FOLLOW_argList_in_ctorDecl397);
                    argList15=argList();

                    state._fsp--;

                    stream_argList.add(argList15.getTree());

                    }
                    break;

            }


            char_literal16=(Token)match(input,38,FOLLOW_38_in_ctorDecl400);  
            stream_38.add(char_literal16);


            char_literal17=(Token)match(input,50,FOLLOW_50_in_ctorDecl402);  
            stream_50.add(char_literal17);


            pushFollow(FOLLOW_ctorBody_in_ctorDecl404);
            ctorBody18=ctorBody();

            state._fsp--;

            stream_ctorBody.add(ctorBody18.getTree());

            char_literal19=(Token)match(input,51,FOLLOW_51_in_ctorDecl406);  
            stream_51.add(char_literal19);


            // AST REWRITE
            // elements: argList, ctorBody, name
            // token labels: name
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 66:7: -> ^( CTOR $name ( argList )? ctorBody )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:66:10: ^( CTOR $name ( argList )? ctorBody )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CTOR, "CTOR")
                , root_1);

                adaptor.addChild(root_1, stream_name.nextNode());

                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:66:23: ( argList )?
                if ( stream_argList.hasNext() ) {
                    adaptor.addChild(root_1, stream_argList.nextTree());

                }
                stream_argList.reset();

                adaptor.addChild(root_1, stream_ctorBody.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ctorDecl"


    public static class argList_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "argList"
    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:69:1: argList : arg ( ',' arg )* -> ^( ARGS ( arg )+ ) ;
    public final FJDParser.argList_return argList() throws RecognitionException {
        FJDParser.argList_return retval = new FJDParser.argList_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal21=null;
        FJDParser.arg_return arg20 =null;

        FJDParser.arg_return arg22 =null;


        CommonTree char_literal21_tree=null;
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_arg=new RewriteRuleSubtreeStream(adaptor,"rule arg");
        try {
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:70:5: ( arg ( ',' arg )* -> ^( ARGS ( arg )+ ) )
            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:70:7: arg ( ',' arg )*
            {
            pushFollow(FOLLOW_arg_in_argList443);
            arg20=arg();

            state._fsp--;

            stream_arg.add(arg20.getTree());

            // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:70:11: ( ',' arg )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==39) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:70:12: ',' arg
            	    {
            	    char_literal21=(Token)match(input,39,FOLLOW_39_in_argList446);  
            	    stream_39.add(char_literal21);


            	    pushFollow(FOLLOW_arg_in_argList448);
            	    arg22=arg();

            	    state._fsp--;

            	    stream_arg.add(arg22.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // AST REWRITE
            // elements: arg
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 71:7: -> ^( ARGS ( arg )+ )
            {
                // C:\\projects\\fjd\\src\\main\\java\\th\\ac\\sut\\fjd\\FJD.g:71:10: ^( ARGS ( arg )+ )
